<resources>
    <string name="app_name">Desafio4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tf_email">E-mail</string>
    <string name="til_password">Password</string>
    <string name="remember">Remember</string>
    <string name="btn_login">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="tf_name">Name</string>
    <string name="btn_create_account">Create Account</string>
    <string name="tfc_password">Repeate password</string>
    <string name="tf_describe">Description</string>
    <string name="btn_save_game">Save Game</string>
    <string name="tf_create_at">Created At</string>
</resources>